Widgetized Home Page Sidebar. Converted Angie's List Badge to a Widget and made an extension to the MailChimp Widget so it would suit our needs. Closes #41

--- a/assets/sass/templates/_common.scss
+++ b/assets/sass/templates/_common.scss
@@ -33,7 +33,28 @@ li.widget {
     list-style: none;
 }
 
-#newsletter {
+.widget_angies_list_badge {
+    text-align: center;
+}
+
+.widget_custom_mailchimpsf_widget, .widget_mailchimpsf_widget {
+    
+    padding: $gutter;
+    
+    .fa {
+        font-size: 2em;
+        margin-top: -0.2em;
+    }
+
+    .mc_signup_submit {
+
+        text-align: right;
+
+        input {
+            width: auto;
+        }
+
+    }
 
     .button {
         background-color: transparent;
