Tiniest bit of margin between Widgets

--- a/assets/sass/templates/_common.scss
+++ b/assets/sass/templates/_common.scss
@@ -31,6 +31,7 @@ Styles shared among all templates.
 
 li.widget {
     list-style: none;
+    margin-bottom: 1em;
 }
 
 .widget_angies_list_badge {
